manifests/base/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: open-cluster-management
spec:
  ports:
  - name: grafana-http
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: grafana
  type: ClusterIP
